style.css
/* Basic Style */
.body {
  background-color: #f8f8f8;
  color: #333;
  font-family: Lato, sans-serif;
}

.info-section {
  width: 500px;
  margin: 0 auto;
  display: block;
  text-align: right;
}

.img-info {
  width: 100%;
}

.info-section .info-link {
  font-family: fantasy, cursive;
}

@media (max-width:768px) {

  .info-section {
    text-align: center;
  }

}

.main {
  display: block;
  width: 500px;
  margin: 0 auto 0;
}

.point-input, .task-label {
  width: 56%;
  display: inline-block;
  flex-grow: 1;
}

.add-input-wrapper {
  display: flex;
}

.point-list {
  margin: 0;
  padding: 0px;
}

.task {
  list-style: none;
}

.point-input,.button {
  outline: none;
}

.button {
  background: none;
  border: 0px;
  color: #888;
  font-size: 15px;
  width: 60px;
  font-family: Lato, sans-serif;
  cursor: pointer;
}

.button:hover {
  color: #3a3a3a;
}

/* Heading */
.title {
  color: #333;
  font-weight: 700;
  font-size: 15px;
  border-bottom: 2px solid #333;
  padding: 30px 0 10px;
  margin: 0;
  text-transform: uppercase;
}

.point-input {
  margin: 0;
  font-size: 18px;
  line-height: 18px;
  height: 21px;
  padding: 0 9px;
  border: 1px solid #ddd;
  background: #fff;
  border-radius: 6px;
  font-family: Lato, sans-serif;
  color: #888;
}

.point-input:focus {
  color: #333;
}

/* New Task */
.add-title {
  display: block;
  margin: 0 0 20px;
}

.add-input {
  width: 318px;
}

/* Task list */
.task {
  overflow: hidden;
  padding: 20px 0;
  border-bottom: 1px solid #eee;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.task > * {
  vertical-align: middle;
}

.task-checkbox {
  margin: 0 10px;
}

.task-label {
  padding-left: 10px;
  box-sizing: border-box;
  font-size: 18px;
  width: 226px;
}

.task >    .point-input {
  width: 226px;
}

.button-img {
  height: 2em;
  transform: rotateZ(45deg);
  transition: transform 200ms ease-in;
}

.button-img:hover {
  transform: rotateZ(0);
}

/* Completed */
.completed .task-label {
  text-decoration: line-through;
  color: #888;
}

/* Edit Task */
.point-list .point-input {
  display: none;
}

.point-edit .point-input {
  display: inline-block;
  width: 224px;
}

.point-edit .task-label {
  display: none;
}

